# Bread-AI-Fiscal

./: LICENSE  README.md  entrypoint.sh  exemplo_fiscal.db  pyproject.toml
Projeto Final - Artefatos/: I2A2_Agentes_Inteligentes_Projeto_Final_Bread-AI.pptx
src/: app.py  app_bkp.py  fiscal_calculator.py  fiscal_database.py  fiscal_validator.py
src/agents/: extraction_agent.py  fiscal_intelligence_agent.py
src/output_parser/: fiscal_analysis_parser.py  fiscal_extraction_parser.py  fiscal_validation_parser.py
